--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -501,7 +501,7 @@ ISSN = {{0038-075X}},
 Unique-ID = {{ISI:A1988P504000001}},
 }
 
-@article{Richards,
+@article{richards,
    author = "Richards, L. A.",
    title = "CAPILLARY CONDUCTION OF LIQUIDS THROUGH POROUS MEDIUMS",
    journal = "Journal of Applied Physics",
