--- a/version2.tex
+++ b/version2.tex
@@ -85,13 +85,13 @@ The main purpose of this inverse model was to evaluate the SHP of the top soil l
 The top soil layer  SHP are very difficult to measure directly, since the thickness of the top soil layer is often much lower than the depth required to embed the SR or Guelph permeameter device or to obtain  undisturbed samples for further laboratory experiments.
 
 
-The main issue, which is addressed in this contribution, is the uniqueness of the Richards equation based inverse model with van Genuchten's constitutive function for the retention curve and Mualem's function for the unsaturated hydraulic conductivity. We tried to answer the question whether is it possible to characterize the unsteady part of the SR infiltration experiment with a unique set of parameters representing  SHP, and whether are all of these parameters vulnerable with the non-uniqueness. The sophisticated differential evolution based algorithm SADE~\cite{sade}, which stores all identified local optima into memory was used for this analyses.
+The main issue, which is addressed in this contribution, is the uniqueness of the Richards equation based inverse model of SR experiment with van Genuchten's constitutive function for the retention curve and Mualem's function for the unsaturated hydraulic conductivity. We tried to answer the question whether is it possible to characterize the unsteady part of the SR infiltration experiment with a unique set of parameters representing  SHP, and whether are all of these parameters vulnerable with the non-uniqueness. The sophisticated differential evolution based algorithm SADE~\cite{grade}, which stores all identified local optima in memory was used for this analyses.
 
-Further the issues in assigning the initial and boundary condition setup, the influence of spatial and temporal discretization on the values of the identified SHPs, and the convergence issues with the Richards equation nonlinear operator during automatic calibration procedure are also mentioned here.
+Further the issues in assigning the initial and boundary condition setup, the influence of spatial and temporal discretization on the values of the identified SHP, and the convergence issues with the Richards equation nonlinear operator during automatic calibration procedure are also mentioned here.
 \end{abstract}
 
 \begin{keyword}
-soil hydraulic parameters \sep inverse modeling of Richards equation \sep influence of spatial and temporal discretization on  solution of the Richards equation \sep application of dd-adaptivity algorithm \sep computational hydrology
+soil hydraulic properties \sep inverse modeling of the Richards equation \sep FEM approximation of the Richards equation \sep differential evolution \sep application of dd-adaptivity algorithm \sep computational hydrology \sep computational soil science
 
 %% MSC codes here, in the form: \MSC code \sep code
 %% or \MSC[2008] code \sep code (2000 is the default)
@@ -105,47 +105,51 @@ soil hydraulic parameters \sep inverse modeling of Richards equation \sep influe
 \section{Introduction}%[lukas]
 % -motivace
 
-Soil hydraulic parameters (SHP), mainly saturated hydraulic conductivity and the parameters of the retention curve, are important for many hydrological models and engineering applications.  The mountainous podzolic soil evaluated here is typical for the source areas of many major rivers in the Central European region. The top layer of the soil plays a key role in the rainfall-runoff process, because it is the top-soil that separates the rainfall into surface runoff and subsurface runoff. The top-soil layers, especially in the case of a mountain forest soil, exhibit large temporal and spatial changes in soil structure (and therefore large variability in SHPs), mainly due to seasonal changes in vegetation activity, changes in root density and root volume, irregular distribution of various plant species on the soil surface, and a distinct alternation of wetting and drying cycles \citep{Fodor,Schwen, Leij, Mubarak}.
+Soil hydraulic properties (hereafter SHP), such as saturated hydraulic conductivity, residual and saturated weater content, and typically van Genuchten (hereafter VG) parameters governing  retention curve and unsaturated hydraulic conductivity, are important for many hydrological models and engineering applications.  The mountainous podzolic soil evaluated here is typical for the source areas of many major rivers in the Central European region. The top layer of the soil plays a key role in the rainfall-runoff process, because it is the top-soil that separates the rainfall into surface runoff and subsurface runoff. 
 
 
 
 Due to the rocks that are present and the dense root system of the covering vegetation, and due to the possible extension of the representative elementary volume, it is often impossible to collect undisturbed samples of top-soil for laboratory measurements in order to obtain the SHP parameters~\citep{Jacka1}. The SHPs of the top-soil are therefore very difficult to measure directly~\citep{Fodor, Jacka1}. 
 
 
-In our study, the well-known single ring method (SR) was used to obtain experimental input data (cumulative infiltration) for inverse modeling. The  single ring infiltrometer (SR) is a widely accepted, simple, robust field method, which is able to measure infiltration process, which affects the entire soil profile including the top-soil,  and can sample a relatively large volume (depending on the diameter of the ring)~\citep{Cheng,ReynoldsWD}.  The single ring (SR) infiltration experiment is an in situ experiment, which does not require soil samples to be collected, so the porous media is naturally undisturbed. With the widely-used ring diameter of 30~cm, the affected porous media is far more representative than any soil sample  we were able to collect. However, the top-soil can also be measured (with some alteration of the surface) using other well-known field infiltration methods, e.g. the tension infiltrometer or the well permeameter (see \citep{AnguloJaramillo,ReynoldsWDGP}). 
- It should be mentioned here that the ring  infiltration exhibits some of the following issues: 1) air may be entrapped in some pores during rapid flooding of the soil surface inside the ring, 2) the flow geometry and the  initial conditions are not known exactly for the entire profile and 3) the boundary conditions (with the exception of the surface of the ring) are difficult to estimate  \citep{Jacka1,Fodor}.
-Since the flow in a variably saturated porous medium is governed by the Richards equation, where the soil properties are described by SHPs, it is expected that the Richards equation can be used for inverse analysis of the of SHPs the top-soil on the basis of the measured unsteady infiltration data. It is apparent that the both unknown saturated and residual water content in case of an absence of the water content experimental data yields non-unique solution of Richards equation inverse model, the residual water content should be excluded from the identification, see~\citep{mous1993}.
-
-Over the last three decades the Richards equation became challenging topic for many proprietary and opensource projects. 
- One of the most well-known code from the proprietary group is Hydrus~\citep{SimunekJ} and FEFLOW~\citep{feflow}. From the opensource group there is recently forming  a  community around the project Open Porous Media~\citep{opm}. However, in this contribution we made use of another opensource project DRUtES~\citep{drutes}, which includes features for efficient solutions of problems with progressive breakthrough (such as the moving wetting front) based on domain decomposition techniques, for details see~\citep{mojecomp, mojejcam2, mojeamc2}. It is our in-house code and its development forms a  part of author's research contributions.  
+In our study, the well-known single ring (hereafter SR) method was used to obtain experimental input data (cumulative infiltration) for inverse modeling. The SR infiltrometer is a widely accepted, simple, robust field method, which is able to measure infiltration process, which affects the entire soil profile including the top-soil,  and can sample a relatively large volume (depending on the diameter of the ring)~\citep{Cheng,ReynoldsWD}.  The SR infiltration experiment is an in situ experiment, which does not require soil samples to be collected, so the porous media is kept relatively undisturbed. With the widely-used ring diameter of 30~cm, the affected porous media is far more representative than any soil sample  we were able to collect. The top-soil can also be measured (with some alteration of the surface) using other well-known field infiltration methods, e.g. the tension infiltrometer or the well permeameter (see \citep{AnguloJaramillo,ReynoldsWDGP}). 
+ 
+The flow in a variably saturated porous medium is governed by the Richards equation~\citep{richards} parametrized by SHP such as the saturated hydraulic conductivity, the residual and saturated water content, and VG parameters~\citep{vangenuchten} (hereafter REVG).
 
 
- Several studies have compared inverse modeling and tension infiltrometers (see e.g. \citep{Verbist, Simunek1, Ventrella, Schwartz, Ramos, Simunek2}). It states that the retention curves obtained from the inverse modeling of the Richards equation using tension infiltrometer data are often not in good agreement with laboratory experiments on undisturbed samples (see e.g. \citep{rezaei}). In particular, the saturated water content obtained from an inverse model based on  the Richards equation is typically distinctly lower than the experimentally established value (see e.g.~\citep{Simunek1, Verbist}). This could be due to the following effects: the effect of hysteresis as a drying process in the laboratory differs from the wetting process in the field; the effect of entrapped air in the field (see e.g.~\citep{Fodor}), where the saturation may not fully correspond the pressure head, and an effect of macropores, which are excluded when a tension infiltrometer is used. Most importantly the soil samples, which are usually  examined in the laboratory, are typically much smaller than the representative elementary volume~\citep{scharnagl}.
- However, it should be mentioned here that a few studies have reported a close correspondence between the retention curve parameters obtained from laboratory experiments and from the Richards equation based inverse model (see e.g.\citep{Ramos} or~\citep{Schwartz}).
-An identification of SHP parameters from transient infiltration experiment was a subject of numerous publications in past decades already, (see e.g. \citep{simunek-infiltr2shp, infiltr2shp, simunek2-infiltr2shp, XU201234, BAGARELLO201770,  hess-Younes-2017}.  \cite{simunek-infiltr2shp} already reported a close correspondence between the SHP parameters obtained from the inverse modeling of dynamic transient infiltration experiment with those obtained from steady-state laboratory experiment, where the uniqueness of the inverse model was preserved by coupling the dynamically changing pressure head, water content and even tracer concentration.
+% with VG parameters governing retention curve and unsaturated hydraulic conductivity, where the SHP are typically described by VG parameters, saturated hydraulic conductivity and residual and saturated water content.
+% And so 
+%  it is expected that the Richards equation can be used for inverse analysis of the of SHPs the top-soil on the basis of the measured unsteady infiltration data. It is apparent that the both unknown saturated and residual water content in case of an absence of the water content experimental data yields non-unique solution of Richards equation inverse model, the residual water content should be excluded from the identification, see~\citep{mous1993}.
 
-The non-uniqueness of the Richards equation inverse model is already a very well-known issue, and has been described by a number of publications over the last decades see e.g.~\citep{kool1985, mous1993, ihlwang2003, beven2003-uncertain}. \todo{must be checked!!}\textbf{However, we have not succeeded in our search for more recent contributions in this field.} \cite{mous1993} defined criteria for model identifiability based on the sensitivity matrix rank, however numerical computation of sensitivity matrix often involves difficulties in maintaining truncation and round-off errors.
+
+
+
+ Several studies  compared REVG inverse modeling of tension infiltrometers (see e.g. \citep{Verbist, Simunek1, Ventrella, Schwartz, Ramos, Simunek2, rezaei}). It states that the retention curves obtained from this inverse modeling using tension infiltrometer data are often not in good agreement with laboratory experiments on undisturbed samples. In particular, the saturated water content obtained from an inverse model of REVG is typically distinctly lower than the experimentally established value (see e.g.~\citep{Simunek1, Verbist}). 
+ There are various theories explaining this issue as e.g. the effect of hysteresis as a drying process in the laboratory differs from the wetting process in the field; the effect of entrapped air in the field (see e.g.~\citep{Fodor}), where the saturation may not fully correspond the pressure head, and an effect of macropores, which are excluded when a tension infiltrometer is used.  But most importantly the soil samples, which are usually  examined in the laboratory, are typically much smaller than the representative elementary volume~\citep{scharnagl}.
+But on the other hand several studies  reported a close correspondence between the retention curve parameters obtained from laboratory experiments and from the REVG analyses \citep{Ramos, Schwartz}. 
+An identification of SHP  from transient infiltration experiment was a subject of numerous publications in past decades already \citep{simunek-infiltr2shp, infiltr2shp, simunek2-infiltr2shp, XU201234, BAGARELLO201770,  hess-Younes-2017}.  \cite{simunek-infiltr2shp} already reported a close correspondence between the SHP  obtained from the inverse modeling of dynamic transient infiltration experiment with those obtained from steady-state laboratory experiment, where the uniqueness of his inverse model was preserved by considering the dynamically changing pressure head, water content and even tracer concentration.
+
+The non-uniqueness of the REVG inverse model is already a very well-known issue, and has been described by a number of publications over the last decades see e.g.~\citep{kool1985, mous1993, ihlwang2003, beven2003-uncertain}. \todo{must be checked!!}\textbf{However, we have not succeeded in our search for more recent contributions in this field.} \cite{mous1993} defined criteria for model identifiability based on the sensitivity matrix rank, however numerical computation of sensitivity matrix, which is represented by derivatives of the objective function,  often involves difficulties in maintaining truncation and also round-off errors.
 \cite{beven2003-uncertain} demonstrated on real world case study of Sherwood Sandstone Aquifer that many different SHP parameters of macroscopic media representing the layered  unsaturated zone provided acceptable simulations of the observed aquifer recharges. However, in this work 
-the non-unique definition with the unknown residual and saturated water content was considered.
-The definition of unique inverse function for identification of macroscopic media was treated in~\citep{zou200126}, where the recommended approach was to assemble the objective function from transient data of the capillary pressure and from the steady state water content data. Another issue is the equifinality in the mathematical model setup in terms of the initial and boundary condition data, this problem was studied by~\citep{klaus-hydrol}.
+the non-unique definition with the unknown residual and saturated water content was considered, despite \cite{mous1993} noticed that  in case of an absence of the water content experimental data, the residual water content should be excluded from the identification.
+The definition of unique inverse function for identification of macroscopic media was treated in~\citep{zou200126}, where the recommended approach was to assemble the objective function from transient data of the capillary pressure and from the steady state water content data. %Another issue is the equifinality in the mathematical model setup in terms of the initial and boundary condition data, this problem was studied by~\citep{klaus-hydrol}.
 
-And yet another challenging issue is the treatment of the nonlinear operator of the Richards equation. \cite{beven2003-uncertain} reported that during his Monte Carlo simulations on wide ranges of SHPs values 56\% of simulations were rejected, because of convergence problems. 
-Despite it wasn't mentioned in the paper explicitly, we can suggest that these convergence issues originated from the nonlinear operator treatment -- the outer iterations.
-It could be easily concluded, that if we use simple Picard method for the nonlinear operator, and we increase the iteration criterion, we will obtain less accurate solution but we will also need less iterations for the Picard method. If we further increase the criterion we will end up with semi-implicit solution, where the constitutive functions in the Richards equation are evaluated from the previous time level solution -- thus we will always need just a single outer iteration.
+And yet another challenging issue is the treatment of the nonlinear operator of the Richards equation. \cite{beven2003-uncertain} reported that during their Monte Carlo simulations on wide ranges of SHPs values 56\% of simulations were rejected, because of convergence problems. 
+It wasn't mentioned in the paper explicitly, we can only suggest that these convergence issues originated from the nonlinear operator treatment -- the outer iterations.
+It could be easily concluded, that if we use simple Picard method for the nonlinear operator, and we increase the iteration criterion (which is typically a so-called $h$ or $\theta$ tolerance), we will obtain less accurate solution but we will also need less iterations for the Picard method. If we further increase the criterion we will end up with semi-implicit solution, where the constitutive functions in the Richards equation are evaluated from the previous time level solution -- thus we will always need just a single outer iteration.
 
 
 
 And so the following questions arise. 
 \begin{itemize}
-\item Is it possible to approximate our relatively simple inverse Richards equation problem, where the only unknown parameters represent the thin top-soil layer, by a unique set of SHPs (excluding the residual water content, which was neglected -- assumed to be zero)?
+\item Is it possible to approximate the unsteady SR experiment by REVG model, where the only unknown parameters represent the thin top-soil layer SHP, by a unique set of parameters? \
 \item If not are all SHPs parameters vulnarable with this non-uniqueness?
-\item Is it acceptable to use here the popular gradient methods to obtain these parameters, since the gradient methods have been very popular since 1980s, see~\citep{vangen-old}, until recent, see e.g.~\citep{rezaei, Verbist2010, Ventrella, Simunek2}?
-\item How much are SHP parameters identified by inverse analyses of SR infiltration dependent on the treatment of the nonlinear operator of the Richards equation? Is there any benefit in using the accurate Newton or Picard iteration method, or can we obtain a reasonable estimate with just the semi-implicit solution (all constitutive function values are obtained from the previous time level solution)?
+\item Are the SHP parameters identified by inverse analyses of SR infiltration dependent on the treatment of the nonlinear operator of the Richards equation? Is there any benefit in using the accurate Newton or Picard iteration method (which can often lead to a slow convergence or even divergence of the REVG nonlinear operator), or can we obtain a reasonable estimate with just the semi-implicit scheme?
 \end{itemize}
 
 
 
-The aim of this paper is to answer these proposed issues. The inverse modeling problem applied here for evaluating these issues will not be a synthetic case but will be a real world problem of identification of the SHP parameters for top soil podzolic horizons of experimental catchment Modrava, Sumava National Park, Czech Republic.  The SHPs for the lower horizons were already identified by various field and laboratory experiments and by data processing (e.g. pedotransfer functions, see Rosetta code~\citep{Schaap}), only the top soil SHPs are difficult to  obtain directly. Moreover, for this type of top soil layer it is even a very difficult to guess some limited ranges of its SHPs. However, the knowledge of the lower horizons should limit the non-uniqueness of this inverse problem. Apart answering the given questions, which are nearly classical but not satisfactory resolved issues in this field of research, we will also try to address issues with initial and boundary condition setup for the approximation of SR infiltration process. Finally, the numerical issues originating from the convection term in the Richards equation representing the axisymmetric SR infiltration flux will be also discussed in this work.
+The aim of this paper is to answer these proposed issues. The inverse modeling problem applied here for evaluating these issues is  a real world problem of identification of the SHP  for top soil podzolic horizons of experimental catchment Modrava, Sumava National Park, Czech Republic.  The SHP for the lower horizons were already described by various field and laboratory experiments and by data processing (e.g. pedotransfer functions, see Rosetta code~\citep{Schaap}), only the top soil SHP are difficult to  obtain directly. Moreover, for this type of top soil layer it is even a very difficult to guess some estimates of its SHPs. However, the knowledge of the lower horizons should decrease the number of unknowns of this inverse problem. In adition to answering the given questions, which are nearly classical but not satisfactory resolved issues in this field of research, we will also try to address issues with initial and boundary condition setup for the approximation of SR infiltration process. And finally, the numerical issues originating from the convection term in the Richards equation representing the axisymmetric SR infiltration flux will be also discussed in this work.
 
 
 
