--- a/version2.tex
+++ b/version2.tex
@@ -105,16 +105,16 @@ soil hydraulic properties \sep inverse modeling of the Richards equation \sep FE
 \section{Introduction}%[lukas]
 % -motivace
 
-Soil hydraulic properties (hereafter SHP), such as saturated hydraulic conductivity, residual and saturated weater content, and typically van Genuchten (hereafter VG) parameters governing  retention curve and unsaturated hydraulic conductivity, are important for many hydrological models and engineering applications.  The mountainous podzolic soil evaluated here is typical for the source areas of many major rivers in the Central European region. The top layer of the soil plays a key role in the rainfall-runoff process, because it is the top-soil that separates the rainfall into surface runoff and subsurface runoff. 
+Soil hydraulic properties (hereafter SHP), such as saturated hydraulic conductivity, residual and saturated weater content, and typically van Genuchten (hereafter VG) parameters~\citep{vangenuchten} governing the retention curve and the unsaturated hydraulic conductivity, are important for many hydrological models and engineering applications.  The mountainous podzolic soil evaluated here is typical for the source areas of many major rivers in the Central European region. The top layer of the soil plays a key role in the rainfall-runoff process, because it is the top-soil that separates the rainfall into surface runoff and subsurface runoff. 
 
 
 
-Due to the rocks that are present and the dense root system of the covering vegetation, and due to the possible extension of the representative elementary volume, it is often impossible to collect undisturbed samples of top-soil for laboratory measurements in order to obtain the SHP parameters~\citep{Jacka1}. The SHPs of the top-soil are therefore very difficult to measure directly~\citep{Fodor, Jacka1}. 
+Due to the rocks that are present and the dense root system of the covering vegetation, and due to the possible extension of the representative elementary volume, it is often impossible to collect undisturbed samples of top-soil for laboratory measurements in order to obtain the SHP parameters~\citep{Jacka1}. The SHP of the top-soil are therefore very difficult to measure directly~\citep{Fodor, Jacka1}. 
 
 
-In our study, the well-known single ring (hereafter SR) method was used to obtain experimental input data (cumulative infiltration) for inverse modeling. The SR infiltrometer is a widely accepted, simple, robust field method, which is able to measure infiltration process, which affects the entire soil profile including the top-soil,  and can sample a relatively large volume (depending on the diameter of the ring)~\citep{Cheng,ReynoldsWD}.  The SR infiltration experiment is an in situ experiment, which does not require soil samples to be collected, so the porous media is kept relatively undisturbed. With the widely-used ring diameter of 30~cm, the affected porous media is far more representative than any soil sample  we were able to collect. The top-soil can also be measured (with some alteration of the surface) using other well-known field infiltration methods, e.g. the tension infiltrometer or the well permeameter (see \citep{AnguloJaramillo,ReynoldsWDGP}). 
+In our study, the well-known single ring (hereafter SR) method was used to obtain experimental input data (cumulative infiltration) for inverse modeling. The SR infiltrometer is a widely accepted, simple, robust field method, which is able to measure infiltration process, which affects the entire soil profile including the top-soil,  and can sample a relatively large volume (depending on the diameter of the ring)~\citep{Cheng,ReynoldsWD}.  The SR infiltration experiment is an in situ experiment, which does not require soil samples to be collected, so the porous medium is kept relatively undisturbed. With the widely-used ring diameter of 30~cm, the affected porous media is far more representative than any soil sample  we were able to collect. The top-soil can also be measured (with some alteration of the surface) using other well-known field infiltration methods, e.g. the tension infiltrometer or the well permeameter (see \citep{AnguloJaramillo,ReynoldsWDGP}). 
  
-The flow in a variably saturated porous medium is governed by the Richards equation~\citep{richards} parametrized by SHP such as the saturated hydraulic conductivity, the residual and saturated water content, and VG parameters~\citep{vangenuchten} (hereafter REVG).
+The flow in a variably saturated porous medium is governed by the Richards equation~\citep{richards} parametrized by SHP represented by the saturated hydraulic conductivity, the residual and saturated water content, and VG parameters. This model will abbreviated in this contribution as REVG.
 
 
 % with VG parameters governing retention curve and unsaturated hydraulic conductivity, where the SHP are typically described by VG parameters, saturated hydraulic conductivity and residual and saturated water content.
@@ -124,12 +124,12 @@ The flow in a variably saturated porous medium is governed by the Richards equat
 
 
 
- Several studies  compared REVG inverse modeling of tension infiltrometers (see e.g. \citep{Verbist, Simunek1, Ventrella, Schwartz, Ramos, Simunek2, rezaei}). It states that the retention curves obtained from this inverse modeling using tension infiltrometer data are often not in good agreement with laboratory experiments on undisturbed samples. In particular, the saturated water content obtained from an inverse model of REVG is typically distinctly lower than the experimentally established value (see e.g.~\citep{Simunek1, Verbist}). 
+ Several studies  compared REVG inverse modeling of tension infiltrometers  \citep{Verbist, Simunek1, Ventrella, Schwartz, Ramos, Simunek2, rezaei}. It states that the retention curves obtained from this inverse modeling using tension infiltrometer data are often not in good agreement with laboratory experiments on undisturbed samples. In particular, the saturated water content obtained from an inverse model of REVG is typically distinctly lower than the experimentally established value (see e.g.~\citep{Simunek1, Verbist}). 
  There are various theories explaining this issue as e.g. the effect of hysteresis as a drying process in the laboratory differs from the wetting process in the field; the effect of entrapped air in the field (see e.g.~\citep{Fodor}), where the saturation may not fully correspond the pressure head, and an effect of macropores, which are excluded when a tension infiltrometer is used.  But most importantly the soil samples, which are usually  examined in the laboratory, are typically much smaller than the representative elementary volume~\citep{scharnagl}.
 But on the other hand several studies  reported a close correspondence between the retention curve parameters obtained from laboratory experiments and from the REVG analyses \citep{Ramos, Schwartz}. 
 An identification of SHP  from transient infiltration experiment was a subject of numerous publications in past decades already \citep{simunek-infiltr2shp, infiltr2shp, simunek2-infiltr2shp, XU201234, BAGARELLO201770,  hess-Younes-2017}.  \cite{simunek-infiltr2shp} already reported a close correspondence between the SHP  obtained from the inverse modeling of dynamic transient infiltration experiment with those obtained from steady-state laboratory experiment, where the uniqueness of his inverse model was preserved by considering the dynamically changing pressure head, water content and even tracer concentration.
 
-The non-uniqueness of the REVG inverse model is already a very well-known issue, and has been described by a number of publications over the last decades see e.g.~\citep{kool1985, mous1993, ihlwang2003, beven2003-uncertain}. \todo{must be checked!!}\textbf{However, we have not succeeded in our search for more recent contributions in this field.} \cite{mous1993} defined criteria for model identifiability based on the sensitivity matrix rank, however numerical computation of sensitivity matrix, which is represented by derivatives of the objective function,  often involves difficulties in maintaining truncation and also round-off errors.
+The non-uniqueness of the REVG inverse model is already a very well-known issue, and has been described by a number of publications over the last decades~\citep{kool1985, mous1993, ihlwang2003, beven2003-uncertain}. \todo{must be checked!!}\textbf{However, we have not succeeded in our search for more recent contributions in this field.} \cite{mous1993} defined criteria for model identifiability based on the sensitivity matrix rank, however numerical computation of sensitivity matrix, which is represented by derivatives of the objective function,  often involves difficulties in maintaining truncation and also round-off errors.
 \cite{beven2003-uncertain} demonstrated on real world case study of Sherwood Sandstone Aquifer that many different SHP parameters of macroscopic media representing the layered  unsaturated zone provided acceptable simulations of the observed aquifer recharges. However, in this work 
 the non-unique definition with the unknown residual and saturated water content was considered, despite \cite{mous1993} noticed that  in case of an absence of the water content experimental data, the residual water content should be excluded from the identification.
 The definition of unique inverse function for identification of macroscopic media was treated in~\citep{zou200126}, where the recommended approach was to assemble the objective function from transient data of the capillary pressure and from the steady state water content data. %Another issue is the equifinality in the mathematical model setup in terms of the initial and boundary condition data, this problem was studied by~\citep{klaus-hydrol}.
