--- a/version2.tex
+++ b/version2.tex
@@ -69,9 +69,11 @@
 
 \author[autor1]{Lukas Jacka}
 
+\author[autor1]{Johanna Ruth Bloecher}
+
 \author[autor2]{Matej Leps}
 
-\author[autor1]{Johanna Ruth Bloecher}
+
 
 \address[autor1]{Czech University of Life Sciences Prague, Faculty of Environmental Sciences, Department of Water Resources and Environmental Modeling}
 
@@ -124,7 +126,7 @@ The flow in a variably saturated porous medium is governed by the Richards equat
 
 
 
- Several studies  compared REVG inverse modeling of tension infiltrometers  \citep{Verbist, Simunek1, Ventrella, Schwartz, Ramos, Simunek2, rezaei}. It states that the retention curves obtained from this inverse modeling using tension infiltrometer data are often not in good agreement with laboratory experiments on undisturbed samples. In particular, the saturated water content obtained from an inverse model of REVG is typically distinctly lower than the experimentally established value (see e.g.~\citep{Simunek1, Verbist}). 
+ Several studies  compared REVG inverse modeling of tension infiltrometers  \citep{Verbist, Simunek1, Ventrella, Schwartz, Ramos, Simunek2, rezaei}. It states that the retention curves obtained from this inverse modeling using tension infiltrometer data are often not in a good agreement with laboratory experiments on undisturbed samples. In particular, the saturated water content obtained from an inverse model of REVG is typically distinctly lower than the experimentally established value (see e.g.~\citep{Simunek1, Verbist}). 
  There are various theories explaining this issue as e.g. the effect of hysteresis as a drying process in the laboratory differs from the wetting process in the field; the effect of entrapped air in the field (see e.g.~\citep{Fodor}), where the saturation may not fully correspond the pressure head, and an effect of macropores, which are excluded when a tension infiltrometer is used.  But most importantly the soil samples, which are usually  examined in the laboratory, are typically much smaller than the representative elementary volume~\citep{scharnagl}.
 But on the other hand several studies  reported a close correspondence between the retention curve parameters obtained from laboratory experiments and from the REVG analyses \citep{Ramos, Schwartz}. 
 An identification of SHP  from transient infiltration experiment was a subject of numerous publications in past decades already \citep{simunek-infiltr2shp, infiltr2shp, simunek2-infiltr2shp, XU201234, BAGARELLO201770,  hess-Younes-2017}.  \cite{simunek-infiltr2shp} already reported a close correspondence between the SHP  obtained from the inverse modeling of dynamic transient infiltration experiment with those obtained from steady-state laboratory experiment, where the uniqueness of his inverse model was preserved by considering the dynamically changing pressure head, water content and even tracer concentration.
@@ -149,7 +151,7 @@ And so the following questions arise.
 
 
 
-The aim of this paper is to answer these proposed issues. The inverse modeling problem applied here for evaluating these issues is  a real world problem of identification of the SHP  for top soil podzolic horizons of experimental catchment Modrava, Sumava National Park, Czech Republic.  The SHP for the lower horizons were already described by various field and laboratory experiments and by data processing (e.g. pedotransfer functions, see Rosetta code~\citep{Schaap}), only the top soil SHP are difficult to  obtain directly. Moreover, for this type of top soil layer it is even a very difficult to guess some estimates of its SHPs. However, the knowledge of the lower horizons should decrease the number of unknowns of this inverse problem. In adition to answering the given questions, which are nearly classical but not satisfactory resolved issues in this field of research, we will also try to address issues with initial and boundary condition setup for the approximation of SR infiltration process. And finally, the numerical issues originating from the convection term in the Richards equation representing the axisymmetric SR infiltration flux will be also discussed in this work.
+The aim of this paper is to answer these proposed issues. The inverse modeling problem applied here for evaluating these issues is  a real world problem of identification of the SHP  for top soil podzolic horizons of experimental catchment Modrava, Sumava National Park, Czech Republic.  The SHP for the lower horizons were already described by various field and laboratory experiments and by data processing (e.g. pedotransfer functions, see Rosetta code~\citep{Schaap}), only the top soil SHP are difficult to  obtain directly. Moreover, for this type of top soil layer it is even a very difficult to guess some estimates of its SHPs. However, the knowledge of the lower horizons should decrease the number of unknowns of this inverse problem. In addition to answering the given questions, which are nearly classical but not satisfactory resolved issues in this field of research, we will also try to address issues with initial and boundary condition setup for the approximation of SR infiltration process. And finally, the numerical issues originating from the convection term in the Richards equation representing the axisymmetric SR infiltration flux will be also discussed in this work.
 
 
 
