--- a/version2.tex
+++ b/version2.tex
@@ -191,6 +191,10 @@ The average groundwater table level can be roughly estimated at -280~cm below th
 
 The soil texture for the horizons below the top-soil are given in the table~\ref{tab:soiltxt}.\todo{I don't get the percentage, I would probably remove even this table.} 
 
+%comment Lukas: The percentages of particles < 2mm are used for USDA classification. that is why the sum of clay, silt and sand gives 100%, additional information is about percentages of skelet >2mm
+%spodic horizon is Bhs and Bs
+%
+
  \begin{table}[ht]
 \begin{center}
 \caption{Soil texture for the lower horizons.}
@@ -200,8 +204,8 @@ The soil texture for the horizons below the top-soil are given in the table~\ref
 \toprule
 horizon & clay ($<2\;\mu$m) & silt ($2\;\mu$m -- 0.05~mm) & sand (0.05 -- 2 mm) & gravel ($>$ 2 mm) & bulk density (g.cm$^{-3}$) \\ \hline
 E       & 1\%               & 20\%                        & 79\%                & 32\% & 1.4 \\ 
-Bhs + Bs &      ??          & ??                          & ??                  & ?? & 1.3 \\
-C        &      ??          & ??                          & ??                  & ?? & 1.3 \\
+Bhs + Bs & 7\%              & 32\%                        & 61 \%               & 30\% & 1.3 \\
+C        &      ??          & ??                          & ??                  & ?? & 1.3 \\ %I am planning to add data next week, I am waiting for additional textural analysis.
 \toprule
 \end{tabular}
 \end{small}
