--- a/version2.tex
+++ b/version2.tex
@@ -189,7 +189,8 @@ A haplic podzol with distinct soil horizons is dominant on this site. The mean d
 \end{itemize}
 The average groundwater table level can be roughly estimated at -280~cm below the surface. 
 
-The soil texture for the horizons below the top-soil are given in the table~\ref{tab:soiltxt}.\todo{I don't get the percentage, I would probably remove even this table.} 
+The soil characteristics of the horizons below the top-soil %or we can include top-soil in the table and use NA
+are given in the table~\ref{tab:soiltxt}.\todo{I don't get the percentage, I would probably remove even this table.} 
 
 %comment Lukas: The percentages of particles < 2mm are used for USDA classification. that is why the sum of clay, silt and sand gives 100%, additional information is about percentages of skelet >2mm
 %spodic horizon is Bhs and Bs
@@ -197,7 +198,7 @@ The soil texture for the horizons below the top-soil are given in the table~\ref
 
  \begin{table}[ht]
 \begin{center}
-\caption{Soil texture for the lower horizons.}
+\caption{Soil characteristics for the soil horizons.}
 \begin{small}
 \doublespacing
 \begin{tabular}{c | c  c  c  c  c}
